--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Volunter Form</h1>
+	<h1>Volunteer Form</h1>
 	<form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
 		<fieldset>
 			<legend>My Info</legend>
@@ -32,7 +32,7 @@
 				<div><label>Monday <input type="checkbox" name="available_field" value="Monday"> </label></div>
 				<div><label>Tuesday <input type="checkbox" name="available_field" value="Tuesday"></label></div>
 				<div><label>Wednesday <input type="checkbox" name="available_field" value="Wednesday"></label></div>
-				<div><label>Thrusday <input type="checkbox" name="available_field" value="Thrusday"></label></div>
+				<div><label>Thursday <input type="checkbox" name="available_field" value="Thrusday"></label></div>
 				<div><label>Friday <input type="checkbox" name="available_field" value="Friday"></label></div>
 				<div><label>Saturday <input type="checkbox" name="available_field" value="Saturday"></label></div>
 				<h3>Comments</h3>
