--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 			<h3>Days Available:</h3>
 			<div>
 				<div><label>Sunday <input type="checkbox" name="available_field[]" value="Sunday"></label></div>
-				<div><label>Monday <input type="checkbox" name="available_field" value="Monday"> </label></div>
-				<div><label>Tuesday <input type="checkbox" name="available_field" value="Tuesday"></label></div>
-				<div><label>Wednesday <input type="checkbox" name="available_field" value="Wednesday"></label></div>
-				<div><label>Thursday <input type="checkbox" name="available_field" value="Thrusday"></label></div>
-				<div><label>Friday <input type="checkbox" name="available_field" value="Friday"></label></div>
-				<div><label>Saturday <input type="checkbox" name="available_field" value="Saturday"></label></div>
+				<div><label>Monday <input type="checkbox" name="available_field[]" value="Monday"> </label></div>
+				<div><label>Tuesday <input type="checkbox" name="available_field[]" value="Tuesday"></label></div>
+				<div><label>Wednesday <input type="checkbox" name="available_field[]" value="Wednesday"></label></div>
+				<div><label>Thursday <input type="checkbox" name="available_field[]" value="Thrusday"></label></div>
+				<div><label>Friday <input type="checkbox" name="available_field[]" value="Friday"></label></div>
+				<div><label>Saturday <input type="checkbox" name="available_field[]" value="Saturday"></label></div>
 				<h3>Comments</h3>
 				<textarea name="comments_field"></textarea>
 			</div>
